# OpenScan2

./: 404.html  index.html  pyproject.toml
app/config/: __init__.py  cloud.py  motor.py  openscan.py  scanner.py
app/controllers/: motor.py  scanner.py
app/controllers/cameras/: camera.py  cameras.py  gphoto.py  v4l2.py
app/models/: camera.py  motor.py  scanner.py
app/routers/: cameras.py  motors.py  scanner.py
builds/OpenScanClassic/: index.html
builds/OpenScanMini/: index.html
builds/PCBs/: index.html
changelog/: index.html
firmware/setup/: index.html
firmware/usage/: index.html
photogrammetry/basics/: index.html
photogrammetry/software/: index.html
search/: search_index.json
settings/: motor_rotor.json  motor_turntable.json
src/: main.py
src/config/: __init__.py  camera.py  openscan.py  scanner.py
src/controllers/: cloud.py  scanner.py  utils.py
src/controllers/cameras/: arducam.py  camera.py  cameras.py  gphoto.py  v4l2.py  webcam.py
src/models/: camera.py
src/routers/: cameras.py  scanner.py
