[tool.poetry]
name = "openscan"
version = "2.0.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.28.1"
gphoto2 = "^2.3.3"
Flask = "^2.1.2"
v4l2 = "^0.2"
Pillow = "^9.2.0"
"RPi.GPIO" = "^0.7.1"
fastapi = "^0.78.0"
uvicorn = {extras = ["standard"], version = "^0.18.2"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
